# realtime-asr-engine

./: .gitignore  README.md  pyproject.toml
examples/: minimal_host.py
src/realtime_asr_engine/: __init__.py  audio.py  core.py  interpretation.py  runner.py  settings.py  types.py  vad_silero.py
tests/: test_core.py  test_interpretation.py  test_live_runner.py  test_minimal_host.py  test_settings.py  test_types.py
